# OpenEnv-Quadcopter-Controller

./: .gitignore  Dockerfile  README.md  RUN_INFERENCE.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
docs/: BUILDING_ENV.md  PROBLEM_STATEMENT.md
example/: Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
example/server/: __init__.py  app.py  example_environment.py
openenv_quadnav.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: __init__.py  app.py  environment.py  requirements.txt  tasks.py
sim/: README.md  env.py  parameter.py  utils.py
sim/controller/: config.py  control.py  run_simulation.py  trajectory.py  waypoints.py
sim/controller/utils/: __init__.py  animation.py  display.py  mixer.py  quaternion.py  rotations.py  state_conversions.py  wind.py
sim/controller/vehicle/: params.py  quadcopter.py
sim/dataset/easy_goals/: maps_1.json  maps_10.json  maps_100.json  maps_101.json  maps_102.json  maps_103.json  maps_104.json  maps_105.json  maps_106.json  maps_107.json  maps_108.json  maps_109.json  maps_11.json  maps_110.json  maps_111.json  maps_112.json  maps_113.json  maps_114.json  maps_115.json  maps_116.json  maps_117.json  maps_118.json  maps_119.json  maps_12.json  maps_120.json  maps_121.json  maps_122.json  maps_123.json  maps_124.json  maps_125.json  maps_126.json  maps_127.json  maps_128.json  maps_129.json  maps_13.json  maps_130.json  maps_131.json  maps_132.json  maps_133.json  maps_134.json  (+460 more)
sim/dataset/hard_goals/: maps_1.json  maps_10.json  maps_100.json  maps_101.json  maps_102.json  maps_103.json  maps_104.json  maps_105.json  maps_106.json  maps_107.json  maps_108.json  maps_109.json  maps_11.json  maps_110.json  maps_111.json  maps_112.json  maps_113.json  maps_114.json  maps_115.json  maps_116.json  maps_117.json  maps_118.json  maps_119.json  maps_12.json  maps_120.json  (+475 more)
(+500 files in other folders)
